Fixed LESS file from previous commit. Added GitHub and StackOverflow contact details.

--- a/css/main.less
+++ b/css/main.less
@@ -501,11 +501,11 @@ body.no-rgba .gallery {
 	#mark-photo {
 		float: right;
 		border: @margin-1-unit solid @colour-white;
-		width: 180px;
-		height: 270px;
+		width: 250px;
+		height: 250px;
 		margin: @margin-4-unit 0 @margin-2-units @margin-4-unit;
-		background-image: url(../images/markwhitaker.jpg);
-		background-size: 180px 270px;
+		background-size: 250px 250px;
+		background: url(../images/markwhitaker.jpg) no-repeat;
 	}
 }
 
@@ -525,8 +525,9 @@ body.no-rgba .gallery {
 		font-size: @font-size-h2;
 	}
 
-	.fa {
+	.icon {
 		color: @colour-near-black;
+		margin-right: @margin-half-unit;
 	}
 }
 
@@ -729,10 +730,10 @@ body.no-rgba .gallery {
 	#about {
 		#mark-photo {
 			border-width: @margin-half-unit;
-			width: 90px;
-			height: 135px;
+			width: 125px;
+			height: 125px;
 			margin: 0 0 @margin-1-unit @margin-1-unit;
-			background-size: 90px 135px;
+			background-size: 125px 125px;
 		}
 	}
 
